Fix map display on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -434,6 +434,11 @@ span {
     padding: 20px 0;
     border-top: 1px solid #999;
     margin: 0 25px;
+    height: 450px;
+  }
+
+  #map {
+    height: calc(100% - 80px);
   }
 }
 
